# chem-knowledge-base

./: .gitignore  README.md  pyproject.toml
alembic/versions/: 001_initial_schema.py
config/: config.yaml  substance_target_list.csv
data/substances/: 107-06-2.json  108-88-3.json  110-82-7.json  115-07-1.json  12167-74-7.json  124-38-9.json  1305-62-0.json  1305-78-8.json  1309-37-1.json  1310-58-3.json  1310-73-2.json  1314-62-1.json  1330-20-7.json  1333-74-0.json  1344-28-1.json  497-19-8.json  50-00-0.json  50-99-7.json  630-08-0.json  64-17-5.json  64-19-7.json  6484-52-2.json  67-56-1.json  67-64-1.json  71-43-2.json  74-82-8.json  74-84-0.json  74-85-1.json  74-86-2.json  74-98-6.json  7439-89-6.json  7440-02-0.json  7440-05-3.json  7440-06-4.json  7446-09-5.json  7446-11-9.json  75-01-4.json  75-21-8.json  7631-86-9.json  7647-01-0.json  (+10 more)
src/cli/: main.py
src/collectors/: base.py  nist_collector.py  orchestrator.py  pubchem_collector.py  wiki_collector.py
src/db/: models.py
src/utils/: cas_validator.py
src/validation/: cross_referencer.py
