[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chem-knowledge-base"
version = "0.1.0"
description = "工业化学物质数据库"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "fastapi>=0.109.0",
    "uvicorn[standard]",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "pubchempy>=1.0.4",
    "tenacity>=8.2.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
rdkit = ["rdkit>=2023.9.6"]
embedding = ["sentence-transformers>=2.2.0", "ollama>=0.1.8"]

[project.scripts]
chemdb = "src.cli.main:cli_group"

[tool.setuptools.packages.find]
where = ["."]
